objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>ImpPM_SalesOpsNotes__c</fullName>
        <label>SalesOps Handover Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpPM_SwitchingPayCycle__c</fullName>
        <label>Switching Pay Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_or_N</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImpPM_WorkWeekSchedule__c</fullName>
        <label>Work Week Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Hand_Off_Readiness_Date__c</fullName>
        <label>Implementation Handover Readiness Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Hand_Off_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Handover Ready?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>Administrative and Support and Waste Management and Remediation Services</fullName>
                </value>
                <value>
                    <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Finance and Insurance</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Management of Companies and Enterprises</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mining, Quarrying &amp; Oil &amp; Gas Extraction</fullName>
                </value>
                <value>
                    <fullName>Other Services (except Public Administration)</fullName>
                </value>
                <value>
                    <fullName>Professional, Scientific, and Technical Services</fullName>
                </value>
                <value>
                    <fullName>Public Administration</fullName>
                </value>
                <value>
                    <fullName>Real Estate and Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntakeMeetingNotes__c</fullName>
        <label>Intake Meeting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kaiser_Date_Received__c</fullName>
        <description>Flag to let the team know that the prospect's Kaiser quote was received</description>
        <inlineHelpText>Flag to let the team know that the prospect's Kaiser quote was received</inlineHelpText>
        <label>Kaiser Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kaiser_Tier__c</fullName>
        <description>Kaiser Tier the organization will be quoted on</description>
        <inlineHelpText>Kaiser Tier the organization will be quoted on</inlineHelpText>
        <label>Kaiser Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_PSH_Client_Connectivity__c</fullName>
        <label>Known PSH Client Connectivity?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Known_PSH_EE_Connectivity__c</fullName>
        <label>Known PSH EE Connectivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Known_involved_head_to_head_competitors__c</fullName>
        <label>Who else are they getting proposals from</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Business Edge</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>Makai HR</fullName>
                </value>
                <value>
                    <fullName>Talent HR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other/Unknown</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_HC_Underwriter_Submission_Date__c</fullName>
        <label>Last HC Underwriter Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Date__c</fullName>
        <description>Date of lead marketing field</description>
        <inlineHelpText>Date of lead marketing field</inlineHelpText>
        <label>Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Method__c</fullName>
        <label>Lead Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call In</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Prospecting Activities</fullName>
                </value>
                <value>
                    <fullName>Walk In</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>HIIFS</fullName>
                </value>
                <value>
                    <fullName>AIS</fullName>
                </value>
                <value>
                    <fullName>ASB</fullName>
                </value>
                <value>
                    <fullName>HLTCA</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketingCampaignSource__c</fullName>
        <label>Marketing Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_year_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to let pricing know this is a Multi-year Contract</description>
        <inlineHelpText>Flag to let pricing know this is a Multi-year Contract</inlineHelpText>
        <label>Multi-year Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_HC_Requote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need HC Requote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_WC_Requote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need WC Requote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_to_Blue_N2B__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New to Blue (N2B) based pricing</description>
        <inlineHelpText>New to Blue (N2B) based pricing</inlineHelpText>
        <label>New to Blue (N2B)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Next steps and predicted outcome by Sales Ops</description>
        <inlineHelpText>Next steps and predicted outcome by Sales Ops</inlineHelpText>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Product_No_migration_SFDC__c</fullName>
        <description>ProService Labor Fees cost that will display in the proposal</description>
        <inlineHelpText>ProService Labor Fees cost that will display in the proposal</inlineHelpText>
        <label>ProService Labor Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a proposal isn't made, just a onesheet of our rate offer</description>
        <inlineHelpText>When a proposal isn't made, just a onesheet of our rate offer</inlineHelpText>
        <label>One Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Current_HC_Carrier__c</fullName>
        <label>Other Current HC Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Current_Payroll__c</fullName>
        <label>Other Current Payroll</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_reasons_to_go_through_RFP__c</fullName>
        <label>Other reasons to go through RFP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_State_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of State Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRMC_Date_Received__c</fullName>
        <description>Flag to let the team know that the prospect's PRMC was received</description>
        <inlineHelpText>Flag to let the team know that the prospect's PRMC was received</inlineHelpText>
        <label>PRMC Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRMC_HMSA_Tier__c</fullName>
        <description>PRMC HMSA Tier the prospect will be quoted on</description>
        <inlineHelpText>PRMC HMSA Tier the prospect will be quoted on</inlineHelpText>
        <label>PRMC HMSA Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>H009</fullName>
                </value>
                <value>
                    <fullName>H010</fullName>
                </value>
                <value>
                    <fullName>H011</fullName>
                </value>
                <value>
                    <fullName>H012</fullName>
                </value>
                <value>
                    <fullName>H014</fullName>
                </value>
                <value>
                    <fullName>H015</fullName>
                </value>
                <value>
                    <fullName>H017</fullName>
                </value>
                <value>
                    <fullName>H018</fullName>
                </value>
                <value>
                    <fullName>H020</fullName>
                </value>
                <value>
                    <fullName>H023</fullName>
                </value>
                <value>
                    <fullName>H025</fullName>
                </value>
                <value>
                    <fullName>H030</fullName>
                </value>
                <value>
                    <fullName>H035</fullName>
                </value>
                <value>
                    <fullName>H040</fullName>
                </value>
                <value>
                    <fullName>H045</fullName>
                </value>
                <value>
                    <fullName>H050</fullName>
                </value>
                <value>
                    <fullName>H060</fullName>
                </value>
                <value>
                    <fullName>H065</fullName>
                </value>
                <value>
                    <fullName>H070</fullName>
                </value>
                <value>
                    <fullName>H075</fullName>
                </value>
                <value>
                    <fullName>H080</fullName>
                </value>
                <value>
                    <fullName>H085</fullName>
                </value>
                <value>
                    <fullName>H090</fullName>
                </value>
                <value>
                    <fullName>H095</fullName>
                </value>
                <value>
                    <fullName>H100</fullName>
                </value>
                <value>
                    <fullName>H105</fullName>
                </value>
                <value>
                    <fullName>H110</fullName>
                </value>
                <value>
                    <fullName>H115</fullName>
                </value>
                <value>
                    <fullName>H120</fullName>
                </value>
                <value>
                    <fullName>H125</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRMC_Risk_Rate_Tier__c</fullName>
        <description>PRMC Risk Rate Tier</description>
        <inlineHelpText>PRMC Risk Rate Tier</inlineHelpText>
        <label>PRMC Risk Rate Tier</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Time_Employees__c</fullName>
        <description>Number of full time employees. Converts from leads when opportunity is created. Overwritten when WC is entered into the quote.</description>
        <inlineHelpText>Number of full time employees. Converts from leads when opportunity is created. Overwritten when WC is entered into the quote.</inlineHelpText>
        <label>Part Time Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preliminary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preliminary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Notes__c</fullName>
        <description>Special pricing notes or instructions regarding that affects the proposal</description>
        <inlineHelpText>Special pricing notes or instructions regarding that affects the proposal</inlineHelpText>
        <label>Pricing Notes</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <description>Primary Contact Name to use in email templates</description>
        <formula>Primary_Contact__r.FirstName &amp; ' ' &amp;  Primary_Contact__r.LastName</formula>
        <label>Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact on the opportunity used for automated processes.  Should auto update to the contact role marked as primary every time an opportunity is created or edited.</description>
        <inlineHelpText>This contact is used for all automated communications.  Update this in Contact Roles.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProService_HR_Support__c</fullName>
        <description>ProService HR Support cost that will display in the proposal</description>
        <inlineHelpText>ProService HR Support cost that will display in the proposal</inlineHelpText>
        <label>ProService HR Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProService_Healthcare__c</fullName>
        <description>ProService Healthcare cost that will display in the proposal</description>
        <inlineHelpText>ProService Healthcare cost that will display in the proposal</inlineHelpText>
        <label>ProService Healthcare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProService_T_A_Cost__c</fullName>
        <description>ProService T&amp;A  cost that will display in the proposal</description>
        <inlineHelpText>ProService T&amp;A  cost that will display in the proposal</inlineHelpText>
        <label>ProService T&amp;A Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProService_Work_Comp__c</fullName>
        <description>ProService Work Comp cost that will display in the proposal</description>
        <inlineHelpText>ProService Work Comp cost that will display in the proposal</inlineHelpText>
        <label>ProService Work Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProposalDate__c</fullName>
        <description>Date of when an Opportunity stage moves from Pricing Complete to Proposal Complete</description>
        <inlineHelpText>Date of when an Opportunity stage moves from Pricing Complete to Proposal Complete</inlineHelpText>
        <label>Proposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prospect_Grade__c</fullName>
        <description>Get description from Sales Ops</description>
        <inlineHelpText>Get description from Sales Ops</inlineHelpText>
        <label>Prospect Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Growth_Goals__c</fullName>
        <description>Prospect Growth Goals next two to five years</description>
        <inlineHelpText>Prospect Growth Goals next two to five years</inlineHelpText>
        <label>Prospect Growth Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_HR_Support__c</fullName>
        <description>Prospect's current HR Support cost</description>
        <inlineHelpText>Prospect's current HR Support cost</inlineHelpText>
        <label>Prospect HR Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Healthcare__c</fullName>
        <description>Prospect's current Healthcare cost</description>
        <inlineHelpText>Prospect's current Healthcare cost</inlineHelpText>
        <label>Prospect Healthcare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_History__c</fullName>
        <description>Get description from Sales Ops</description>
        <inlineHelpText>Get description from Sales Ops</inlineHelpText>
        <label>Prospect History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Labor_Fees__c</fullName>
        <description>Prospect current Labor Fees costs</description>
        <inlineHelpText>Prospect current Labor Fees costs</inlineHelpText>
        <label>Prospect Labor Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Work_Comp__c</fullName>
        <description>Prospect's current Work Comp cost</description>
        <inlineHelpText>Prospect's current Work Comp cost</inlineHelpText>
        <label>Prospect Work Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QMI_Action_Plan_Next_Steps__c</fullName>
        <label>QMI Action Plan / Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QMI_Biz_Impacts_Score__c</fullName>
        <formula>CASE(QMI_How_many_biz_impacts_did_you_uncover__c, 
"0", 0, 
"1", 2,
"2", 4,
"3", 6,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Biz Impacts Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_Biz_impact_discoveries_solving_to__c</fullName>
        <label>Biz impact discoveries we are solving to</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QMI_Broker_Notes_If_Applicable__c</fullName>
        <label>Broker Notes - If Applicable</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QMI_Decision_Maker_in_Discovery_Score__c</fullName>
        <formula>CASE(QMI_Was_decision_maker_in_discovery_meet__c, 
"Yes", 3, 
"No", 0, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker in Discovery Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_Decision_Making_Process_Score__c</fullName>
        <formula>CASE(Decision_Making_Process__c, 
"Single point of contact", 2, 
"Multiple decision makers", 0, 
"Board", 0, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Making Process Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_Decision_Making_Timeline_Score__c</fullName>
        <formula>CASE(QMI_Prospects_decision_making_timeline__c, 
"30 days", 4, 
"60 days", 3, 
"90 days", 2, 
"Greater than 90 days", 1, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Making Timeline Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_Does_prospect_have_out_of_state_EEs__c</fullName>
        <label>Does the prospect have out of state EEs?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QMI_Does_the_prospect_have_union_EEs__c</fullName>
        <label>Does the prospect have union employees?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QMI_Does_the_prospect_need_USLH_coverage__c</fullName>
        <label>Does the prospect need USL&amp;H coverage?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QMI_Health_Care_Provider_Notes_If_Applic__c</fullName>
        <label>Health Care Provider Notes - If Appliabl</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QMI_Health_Care_Renewal_Months_If_known1__c</fullName>
        <label>Health Care Renewal Months - If known 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QMI_Health_Care_Renewal_Months_If_known2__c</fullName>
        <label>Health Care Renewal Months - If known 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QMI_How_can_the_org_help_engage_prospect__c</fullName>
        <label>How can the org help engage the prospect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HR Consultation</fullName>
                </value>
                <value>
                    <fullName>HR Training Event</fullName>
                </value>
                <value>
                    <fullName>CPR Training</fullName>
                </value>
                <value>
                    <fullName>Office Tour</fullName>
                </value>
                <value>
                    <fullName>Product Demo</fullName>
                </value>
                <value>
                    <fullName>C-Level Engagement</fullName>
                </value>
                <value>
                    <fullName>Exceptions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QMI_How_many_biz_impacts_did_you_uncover__c</fullName>
        <label>How many biz impacts did you uncover?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QMI_Known_PSH_Client_Connectivity_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Known PSH Client Connectivity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Known PSH Client Connectivity</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QMI_List_if_prospect_is_working_w_broker__c</fullName>
        <label>List if prospect is working with broker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QMI_Manager_Feedback_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Feedback Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QMI_Manager_Feedback_Notes__c</fullName>
        <label>Manager Feedback Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QMI_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QMI_Out_of_State_Score__c</fullName>
        <formula>CASE(QMI_Does_prospect_have_out_of_state_EEs__c, 
"Yes", 0, 
"No", 1, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of State Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_PSH_Client_Connectivity_Score__c</fullName>
        <formula>CASE(Known_PSH_Client_Connectivity__c, 
"Yes", 1, 
"No", 0, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSH Client Connectivity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_Payroll_Provider_Notes_If_Applicable__c</fullName>
        <label>Payroll Provider Notes - If Applicable</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QMI_Pct_EEs_on_Healthcare_Score__c</fullName>
        <formula>CASE(QMI_What_pct_of_EEs_are_on_healthcare__c, 
"10%", 0.5, 
"20%", 1, 
"30%", 1.5, 
"40%", 2, 
"50%", 2.5, 
"60%", 3, 
"70%", 3.5, 
"80%", 4, 
"90%", 4.5, 
"100%", 5, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% EE's on Healthcare Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_Prospects_decision_making_timeline__c</fullName>
        <label>Prospect's decision making timeline?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>Greater than 90 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>